@@ -20,7 +20,7 @@ USE_PYTHON=	autoplist concurrent distutils
 
 regression-test: build
 # Extra tests for python 3, added in by setup3lib.py
-.if ${PYTHON_REL} >= 300
+.if ${PYTHON_REL} >= 3000
 	@cd ${WRKSRC} && ${PYTHON_CMD} ${PYDISTUTILS_SETUP} build_tests
 .endif
 	@cd ${WRKSRC} && ${PYTHON_CMD} selftest.py --verbose
