@@ -19,12 +19,12 @@ USE_PYTHON=	distutils autoplist
 .include <bsd.port.pre.mk>
 
 # ndg_httpclient is only available for Python 2
-.if ${PYTHON_REL} < 300
+.if ${PYTHON_REL} < 3000
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}ndg_httpsclient>=0.3.3:${PORTSDIR}/net/py-ndg_httpsclient
 .endif
 
 post-extract:
-.if ${PYTHON_REL} >= 300
+.if ${PYTHON_REL} >= 3000
 	@${RM} ${WRKSRC}/urllib3/contrib/pyopenssl.py
 .endif
 
