@@ -20,7 +20,7 @@ USE_PYTHON=	distutils autoplist
 # Maintainer: Reminder to keep testing python 3.x compatibility.
 .include <bsd.port.pre.mk>
 
-.if ${PYTHON_REL} >= 300
+.if ${PYTHON_REL} >= 3000
 BUILD_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}six>0:${PORTSDIR}/devel/py-six
 pre-build:
 	@cd ${WRKSRC} && 2to3-${PYTHON_VER} -w src
